src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_status__c</fullName>
        <defaultValue>&quot;Open&quot;</defaultValue>
        <label>Account status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_name__c</fullName>
        <label>Company name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.TECH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recent_Experience__c</fullName>
        <label>Recent Experience</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Experience</fullName>
        <active>true</active>
        <description>This is record type of Experience</description>
        <label>Experience</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fresher</fullName>
        <active>true</active>
        <description>This is record type of fresher</description>
        <label>Fresher</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>